--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@
     font-size: 60px
 }
 .div-a {
-  width: 223px;
+  width: 1137px;
+  height: 50px;
   border: 0px;
   padding: 0px;
-  margin: 220px;
+  margin: 0px;
   text-align: center;
 }
